--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "api",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
-    "mqtt": "^5.10.1"
+    "mqtt": "5.10.1",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
+    "uuid": "^10.0.0"
   }
 }
