--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 JWT_SECRET=my-32-character-ultra-secure-and-ultra-long-secret
+SERVER_URL=http://localhost:3000
 SERVER_PORT=3000
-MQTT_BROKER_URL=mqtt://localhost:1883
+MQTT_BROKER_URL=mqtt://test.mosquitto.org
+MQTT_REAL_BROKER_URL =mqtt://localhost:1883
