--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,14 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js && nodemon ./src/mqtt/mqttController.js"
   },
   "dependencies": {
-    "mqtt": "5.10.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7",
-    "uuid": "^10.0.0"
     "mqtt": "5.10.1",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "uuid": "^10.0.0"
   }
