MQTT para testear y Arduino andando

--- a/backend/mqtt_gateway/mosquitto/config/mosquitto.conf
+++ b/backend/mqtt_gateway/mosquitto/config/mosquitto.conf
@@ -1,7 +1,9 @@
 persistent_client_expiration 1d
-port 1884
+port 1885
 max_connections 1024
 persistence_location /data
 
 password_file /mosquitto/config/passwd
-allow_anonymous false
+allow_anonymous true
+
+
