--- a/backend/mqtt_gateway/docker-compose.yml
+++ b/backend/mqtt_gateway/docker-compose.yml
@@ -12,3 +12,5 @@ services:
       - ./mosquitto/data:/mosquitto/data
       - ./mosquitto/log:/mosquitto/log
       - ./mosquitto/config:/mosquitto/config
+    environment:
+      - MOSQUITTO_CONFIG=/mosquitto/config/mosquitto.conf
