--- a/backend/mqtt_gateway/mosquitto/config/mosquitto.conf
+++ b/backend/mqtt_gateway/mosquitto/config/mosquitto.conf
@@ -3,7 +3,7 @@ port 1885
 max_connections 1024
 persistence_location /data
 
-password_file /mosquitto/config/passwd
-allow_anonymous true
+password_file /mosquitto/config/passwordfile
+allow_anonymous false
 
 
