--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -4,6 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "mqtt": "^5.10.1"
+    "mqtt": "^5.10.1",
+    "axios": "^1.7.7"
   }
+
 }
