--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "sistema-de-monitoreo-y-control-de-ganado",
+  "version": "1.0.0",
+
+  "main": "./server.js",
+  "scripts": {
+    "start": "node ./server.js"
+  },
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
