Nuevos mensajes de error+ Express promocion

--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sistema-de-monitoreo-y-control-de-ganado",
   "version": "1.0.0",
-
   "main": "./server.js",
   "scripts": {
     "start": "node ./server.js"
@@ -11,6 +10,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.10.1"
   }
